--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -24,45 +24,83 @@ services:
     image: apache/kafka:3.9.1
     container_name: gsm-kafka
     environment:
-      # KRaft mode
+      # KRaft mode (no ZooKeeper)
       KAFKA_NODE_ID: 1
       KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
 
-      # 👇 Dual listeners (inside docker vs outside docker)
-      KAFKA_LISTENERS: PLAINTEXT://:9092,PLAINTEXT_HOST://:9094,CONTROLLER://:9093
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:9094
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      # Listener configuration
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
 
-      # Topics & transactions
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      # Topic & transaction configs
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_NUM_PARTITIONS: 3
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
 
+      # Optional tuning
       KAFKA_LOG_DIRS: /tmp/kraft-combined-logs
       KAFKA_HEAP_OPTS: "-Xmx512M -Xms512M"
+
     ports:
-      - "9092:9092"  # For kafka-ui (inside docker)
-      - "9094:9094"  # For app outside docker
-      - "9093:9093"  # Controller
+      - "9092:9092"  # For internal & external client connections
+      - "9093:9093"  # For controller communication
     networks:
       - gsm-network
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     container_name: gsm-kafka-ui
-    ports:
-      - "8088:8080"
     environment:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+    ports:
+      - "8088:8080"
     depends_on:
       - kafka
+    networks:
+      - gsm-network
+
+  loki:
+    image: grafana/loki:2.9.8
+    container_name: gsm-loki
+    command: ["-config.file=/etc/loki/local-config.yaml"]
+    ports:
+      - "3100:3100"
+    networks:
+      - gsm-network
+
+  promtail:
+    image: grafana/promtail:2.9.8
+    container_name: gsm-promtail
+    command: ["-config.file=/etc/promtail/promtail.yaml"]
+    volumes:
+      - ./infra/promtail/promtail.yaml:/etc/promtail/promtail.yaml
+      - /var/log:/var/log:ro
+      - ./logs:/var/log/app:ro
+    depends_on:
+      - loki
+    networks:
+      - gsm-network
+
+  grafana:
+    image: grafana/grafana:10.4.3
+    container_name: gsm-grafana
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+    volumes:
+      - grafana-data:/var/lib/grafana
+    depends_on:
+      - loki
     networks:
       - gsm-network
 
@@ -72,3 +110,4 @@ networks:
 
 volumes:
   postgres-data:
+  grafana-data:
