refactor(notification-service): implement CQRS and Domain Events pattern
- Refactor notification-service to follow CQRS pattern with separate commands and queries
- Implement Domain Events pattern for notification creation and read operations
- Split eventbus into publisher and subscriber packages with clear contracts
- Add read_at column to notifications_by_user table with migration
- Add component names to all logs for better observability
- Refactor main.go into bootstrap package with modular setup functions
- Add event dispatcher to handle domain events
- Create event handlers that transform domain events to infrastructure-agnostic payloads
- Add EventBrokerAdapter to bridge application and infrastructure layers
- Update logger format to include component names
- Add ScyllaDB migration script for read_at column
- Update Makefile with migration target

--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -51,7 +51,7 @@ services:
       - KAFKA_BROKERS=kafka:9092
       - NOTIFICATION_CHAT_GROUP_ID=notification-service-chat
       - NOTIFICATION_USER_GROUP_ID=notification-service-user
-      - SCYLLA_HOSTS=scylla:9042
+      - SCYLLA_HOSTS=scylla-1:9042,scylla-2:9042,scylla-3:9042
       - SCYLLA_KEYSPACE=notification_service
       - LOG_OUTPUT_DIR=/var/log/app
     volumes:
