--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -88,6 +88,22 @@ services:
     networks:
       - gsm-network
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: gsm-prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./infra/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+    depends_on:
+      - scylla-1
+    networks:
+      - gsm-network
+
   grafana:
     image: grafana/grafana:10.4.3
     container_name: gsm-grafana
@@ -100,32 +116,61 @@ services:
       - grafana-data:/var/lib/grafana
     depends_on:
       - loki
+      - prometheus
     networks:
       - gsm-network
 
-  scylla:
+  cassandra-web-ui:
+    image: ipushc/cassandra-web:latest
+    container_name: gsm-cassandra-web-ui
+    ports:
+      - "8083:8083"
+    environment:
+      - CASSANDRA_HOST=scylla-1
+      - CASSANDRA_PORT=9042
+    depends_on:
+      - scylla-1
+    networks:
+      - gsm-network
+
+  scylla-1:
     image: scylladb/scylla:5.4
-    container_name: gsm-scylla
-    command: --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
+    container_name: gsm-scylla-1
+    command: --seeds=scylla-1 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
     ports:
       - "9042:9042"
+      - "10000:10000"
     volumes:
-      - scylla-data:/var/lib/scylla
+      - scylla-data-1:/var/lib/scylla
       - ./apps/notification-service/infra/scylla:/var/lib/scylla-init
-    entrypoint: |
-      /bin/sh -c "
-      /docker-entrypoint.py --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0 &
-      pid=$!
-      sleep 25
-      until cqlsh -e 'describe cluster' localhost 9042 >/dev/null 2>&1; do sleep 5; done
-      cqlsh -f /var/lib/scylla-init/notification_service.cql localhost 9042 || true
-      wait $pid
-      "
-    healthcheck:
-      test: ["CMD-SHELL", "cqlsh -e 'describe cluster' localhost 9042"]
-      interval: 10s
-      timeout: 10s
-      retries: 20
+    networks:
+      - gsm-network
+
+  scylla-2:
+    image: scylladb/scylla:5.4
+    container_name: gsm-scylla-2
+    command: --seeds=scylla-1 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
+    ports:
+      - "9043:9042"
+      - "10001:10000"
+    volumes:
+      - scylla-data-2:/var/lib/scylla
+    depends_on:
+      - scylla-1
+    networks:
+      - gsm-network
+
+  scylla-3:
+    image: scylladb/scylla:5.4
+    container_name: gsm-scylla-3
+    command: --seeds=scylla-1 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
+    ports:
+      - "9044:9042"
+      - "10002:10000"
+    volumes:
+      - scylla-data-3:/var/lib/scylla
+    depends_on:
+      - scylla-1
     networks:
       - gsm-network
 
@@ -136,4 +181,7 @@ networks:
 volumes:
   postgres-data:
   grafana-data:
-  scylla-data:
+  scylla-data-1:
+  scylla-data-2:
+  scylla-data-3:
+  prometheus-data:
