refactor: apply proper Dependency Injection pattern
- Create interfaces for all Factories (OrderFactory, MessageFactory, UserFactory)
- Create interfaces for all Domain Mappers (ProductMapper, OrderMapper, MessageMapper)
- Create interfaces for all DTO Mappers (ProductDTOMapper, OrderDTOMapper, MessageDTOMapper)
- Refactor Commands to accept factory interfaces instead of creating directly
- Refactor Repositories to accept mapper interfaces instead of creating directly
- Refactor Handlers to accept DTO mapper interfaces instead of creating directly
- Update Bootstrap to inject all dependencies through interfaces
- Remove direct instantiation in constructors, all dependencies now injected
- Update .gitignore to allow proto files and generated .pb.go files in git

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,8 @@ docker-compose.*.local.yml
 
 # Vendor & generated
 vendor/
-proto/
-*.pb.go
+# proto/ - commented out to allow proto files in git
+# *.pb.go - commented out to allow generated proto files in git
 
 # Node/Web deps (if any future frontend)
 node_modules/
