--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -8,6 +8,7 @@ services:
       POSTGRES_USER: chat_user
       POSTGRES_PASSWORD: chat_password
       POSTGRES_DB: chat_service
+    command: postgres -c max_connections=500 -c shared_buffers=256MB
     ports:
       - "5432:5432"
     volumes:
@@ -143,6 +144,12 @@ services:
     volumes:
       - scylla-data-1:/var/lib/scylla
       - ./apps/notification-service/infra/scylla:/var/lib/scylla-init
+    healthcheck:
+      test: ["CMD-SHELL", "nodetool status | grep -q '^UN'"]
+      interval: 10s
+      timeout: 10s
+      retries: 30
+      start_period: 60s
     networks:
       - gsm-network
 
@@ -156,7 +163,14 @@ services:
     volumes:
       - scylla-data-2:/var/lib/scylla
     depends_on:
-      - scylla-1
+      scylla-1:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "nodetool status | grep -q '^UN'"]
+      interval: 10s
+      timeout: 10s
+      retries: 30
+      start_period: 60s
     networks:
       - gsm-network
 
@@ -170,7 +184,16 @@ services:
     volumes:
       - scylla-data-3:/var/lib/scylla
     depends_on:
-      - scylla-1
+      scylla-1:
+        condition: service_healthy
+      scylla-2:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "nodetool status | grep -q '^UN'"]
+      interval: 10s
+      timeout: 10s
+      retries: 30
+      start_period: 60s
     networks:
       - gsm-network
 
